--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
         </div>
       </section>
        <!-- Section Diplomes -->
-    <section id="diplomes" class=" text-white">
+    <section id="" class=" text-white">
         <div class="container-fluid">
           <div class="container">
             <div class="row">
@@ -206,7 +206,7 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
         </div>
       </section>
       <img src="images/Vector (4).png" class="img-fluid w-100" >
-      <section id="coachs">
+      <section id="">
         <div class="container">
           <div class="row">
             <h2 class="m-0">Nos Coachs</h2>
@@ -337,16 +337,16 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
         </div>
       </div>
     </section>
-    <footer class="container-fluid">
+    <footer id="" class="container-fluid">
       <div class="container mt-5">
         <div class="row">
             <div class="col-sm-3 mb-3 mb-sm-0">
               <div class="card-body">
                 <ul class="my-5">
-                  <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Formation</a></li>
-                  <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Nos Partenaires</a></li>
+                  <li class="my-2"><a class="text-decoration-none text-white" href="#">Formation</a></li>
+                  <li class="my-2"><a class="text-decoration-none text-white" href="#">Nos Partenaires</a></li>
                   <li class="my-2">
-                    <a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Suivez-nous sur </a>
+                    <a class="text-decoration-none text-white" href="#">Suivez-nous sur </a>
                     <div class="my-2 text-white d-flex gap-4">
                       <i class="fa-brands fa-facebook-f"></i>
                       <i class="fa-brands fa-twitter"></i>
@@ -360,15 +360,15 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
               <div class="card-body">
                 <ul class="my-5">
                   <li class="my-2">
-                    <a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Nous contacter au:</a>
+                    <a class="text-decoration-none text-white" href="#">Nous contacter au:</a>
                     <div class="my-1 text-white d-flex gap-4">
-                      <a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">78 546 15 51</a>
+                      <a class="text-decoration-none text-white" href="#">78 546 15 51</a>
                     </div>
                   </li>
                   <li class="my-2">
-                    <a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Sevice Clients au:</a>
+                    <a class="text-decoration-none text-white" href="#">Sevice Clients au:</a>
                     <div class="my-1 text-white d-flex gap-4">
-                      <a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">33 854 35 25</a>
+                      <a class="text-decoration-none text-white" href="#">33 854 35 25</a>
                     </div>
                   </li>
                 </ul>
@@ -377,16 +377,16 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
           <div class="col-sm-3 mb-3 mb-sm-0">
             <div class="card-body">
               <ul class="my-5">
-                <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Qui sommes-nous</a></li>
-                <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Pus de rensignements</a></li>
+                <li class="my-2"><a class="text-decoration-none text-white" href="#">Qui sommes-nous</a></li>
+                <li class="my-2"><a class="text-decoration-none text-white" href="#">Pus de rensignements</a></li>
               </ul>
             </div>
           </div>
           <div class="col-sm-3">
             <div class="card-body">
               <ul class="my-5">
-                <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Evenement</a></li>
-                <li class="my-2"><a class="text-decoration-none text-white" href="https://mbayeseck28.github.io/bootstrap_Proto_4/#">Campus</a></li>
+                <li class="my-2"><a class="text-decoration-none text-white" href="#">Evenement</a></li>
+                <li class="my-2"><a class="text-decoration-none text-white" href="#">Campus</a></li>
               </ul>
             </div>
           </div>
