--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
                         <div class="txt p-5 rounded-1 mt-5">
                             <p class="text-white fw-bolder p-5">Suscipit semper ut volutpat neque, tincidunt dis. Quis vestibulum sit bibendum vitae iaculis tincidunt vel pulvinar. In mattis aliquam ut ipsum. Neque, erat et rhoncus scelerisque. .</p>
                             <div class="text-center d-flex justify-content-evenly">
-                              <a class="btn btn-danger fs-4 fs-lg-1 py-1 px-4" href="#">Nos Services</a>
-                              <a class="btn btn-danger fs-4 fs-lg-1 py-1 px-4 px-lg-1" href="#">Contactez Nous</a>
+                              <a class="btn btn-danger fs-4 fs-lg-1 py-1 px-4 m-3" href="#">Nos Services</a>
+                              <a class="btn btn-danger fs-4 fs-lg-1 py-1 px-4 px-lg-1 m-3" href="#">Contactez Nous</a>
                             </div>
                         </div>
                     </div>
@@ -316,7 +316,7 @@ integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0Ec
               </div>
               <div class="col-sm-2 mb-sm-0">
                 <div class="card d-flex">
-                  <img class=" pb-5 " src="images/creation-de-logo-original-4534-900450-removebg-preview 1.png" alt="">
+                  <img class=" pb-5" src="images/creation-de-logo-original-4534-900450-removebg-preview 1.png" alt="">
                 </div>
               </div>
               <div class="col-sm-2 mb-3 mb-sm-0">
